sort.dutchflag.DutchFlagAlgo.scala.error
Compilation error:
DutchFlagAlgo:13: error: not found: value RedWhite
      swap(afterBlue,RedWhite)
                     ^